--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,10 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+**/tmp
+!.gitkeep
+*.log
+/.vscode
+!/.vscode/launch.json
+robots.txt
+sitemap.xml
 
 # dependencies
 /node_modules
